tests/invalid/annotation_unsupported_union_syntax/main.py
def main() -> None:
    x: int | float = 1
